# codex_projest_exp

./: .gitignore  BUG_DEBUG_LOG.md  CHANGELOG.md  CMakeLists.txt  README.md  sdkconfig
components/app/: CMakeLists.txt  app_event_task.c  app_event_task.h  app_main_task.c  app_main_task.h
components/bsp/: CMakeLists.txt  bsp_button.c  bsp_lcd.c  (+6 more)
components/services/: CMakeLists.txt  beep_service.c  beep_service.h  button_service.c  button_service.h  config_cli_service.c  config_cli_service.h  config_service.c  config_service.h  display_service.c  display_service.h  http_service.c  http_service.h  led_service.c  led_service.h  menu_service.c  menu_service.h  ota_service.c  ota_service.h  wifi_service.c  wifi_service.h
docs/: Cloudflare Workers当前网络环境不可达问题记录.md  ESP-IDF_环境修复说明.md  GitHub_上传速查卡.md  GitHub_版本存档操作笔记.md  NVS配置存储基础速记.md  OTA服务模板文档.md  Wi-Fi掉线调试问题记录.md  config_cli_service代码流程解释.md  menu_service代码流程解释.md  v1.2.1_项目开发文档.md  v1.2.1_项目的事件和函数关系流程表.md  v1.3.0_项目开发文档.md  v1.3.0_项目的事件和函数关系流程表.md  v1.3.1_项目开发文档.md  v1.3.1_项目的事件和函数关系流程表.md  v1.4.0_项目开发文档.md  v1.4.0_项目的事件和函数关系流程表.md  v1.4.1_开发方案文档.md  v1.4.1_项目的事件和函数关系流程表.md  v1.5.0_项目开发文档.md  v1.5.0_项目的事件和函数关系流程表.md  v1.6.0_项目开发文档.md  v1.6.0_项目的事件和函数关系流程表.md  v1.7.0_项目开发文档.md  v1.7.0_项目的事件和函数关系流程表.md  v1.8.0_上板验证清单.md  v1.8.0_开发方案文档.md  v1.8.0_项目开发文档.md  v1.8.0_项目的事件和函数关系流程表.md  v1.9.0_上板验证清单.md  v1.9.0_开发方案文档.md  v1.9.0_真实升级前准备记录.md  v1.9.0_项目开发文档.md  v1.9.0_项目的事件和函数关系流程表.md  v2.0.0_上板验证清单.md  v2.0.0_开发方案文档.md  v2.0.0_项目开发文档.md  v2.0.0_项目的事件和函数关系流程表.md  v2.1.0_上板验证清单.md  v2.1.0_开发方案文档.md  (+16 more)
main/: CMakeLists.txt  main.c
(+12 files in other folders)
